[gd_scene load_steps=7 format=3 uid="uid://d14bwxoenf5uu"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_qqmac"]
[ext_resource type="Texture2D" uid="uid://dwjpup3jrtgms" path="res://images/menu/background1.jpg" id="2_44ns0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a6yge"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x4cft"]
bg_color = Color(0.139538, 0.352191, 0.963831, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bh7fa"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lhj5m"]
bg_color = Color(0.141176, 0.352941, 0.964706, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qqmac")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_44ns0")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.839
anchor_top = 0.671
anchor_right = 0.839
anchor_bottom = 0.671
offset_left = -287.939
offset_top = -480.024
offset_right = 97.0613
offset_bottom = 74.9755
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 60

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_a6yge")
theme_override_styles/normal = SubResource("StyleBoxFlat_x4cft")
text = "COMENZAR"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_bh7fa")
theme_override_styles/normal = SubResource("StyleBoxFlat_lhj5m")
text = "OPCIONES"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_bh7fa")
theme_override_styles/normal = SubResource("StyleBoxFlat_lhj5m")
text = "SALIR"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
